# vyos-agile-vpn

./: ChangeLog  Makefile.am  README.md  configure.ac
debian/: README  changelog  control  copyright  lintian  rules  vyatta-ravpn.postinst.in
lib/Vyatta/: AgileConfig.pm
scripts/: vyos-update-agile.pl
templates-cfg/vpn/ipsec/remote-access/: node.def
templates-cfg/vpn/ipsec/remote-access/authentication/: node.def
templates-cfg/vpn/ipsec/remote-access/authentication/local-users/: node.def
templates-cfg/vpn/ipsec/remote-access/authentication/mode/: node.def
templates-cfg/vpn/ipsec/remote-access/authentication/radius-server/: node.def
templates-cfg/vpn/ipsec/remote-access/client-ip-pool/: node.def
templates-cfg/vpn/ipsec/remote-access/client-ip-pool/subnet/: node.def
templates-cfg/vpn/ipsec/remote-access/compatibility-mode/: node.def
templates-cfg/vpn/ipsec/remote-access/description/: node.def
templates-cfg/vpn/ipsec/remote-access/dhcp-interface/: node.def
templates-cfg/vpn/ipsec/remote-access/dns-servers/: node.def
templates-cfg/vpn/ipsec/remote-access/esp-settings/: node.def
templates-cfg/vpn/ipsec/remote-access/ike-settings/: node.def
templates-cfg/vpn/ipsec/remote-access/inactivity/: node.def
templates-cfg/vpn/ipsec/remote-access/ipsec-settings/: node.def
templates-cfg/vpn/ipsec/remote-access/local-ip/: node.def
templates-cfg/vpn/ipsec/remote-access/outside-address/: node.def
templates-cfg/vpn/ipsec/remote-access/updown-script/: node.def
templates-cfg/vpn/ipsec/remote-access/wins-servers/: node.def
(+34 files in other folders)
